apps/stirling-pdf/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector: {app: stirling-pdf}
  type: ClusterIP
