apps/stirling-pdf/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  rules:
  - host: pdf.infrazone.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stirling-pdf
            port:
              number: 80
  tls:
  - hosts: [pdf.infrazone.cc]
    secretName: pdf-infrazone-tls
